src/objects/caesars_gst_slot_rating_dtl_temp__x.object
<CustomObject>
    <description>caesars$gst_slot_rating_dtl_temp</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>caesars$gst_slot_rating_dtl_temp</externalName>
    <fields>
        <fullName>c_ent_by__c</fullName>
        <description>c_ent_by</description>
        <externalDeveloperName>c_ent_by</externalDeveloperName>
        <label>c_ent_by</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_game_cd__c</fullName>
        <description>c_game_cd</description>
        <externalDeveloperName>c_game_cd</externalDeveloperName>
        <label>c_game_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prep_by__c</fullName>
        <description>c_prep_by</description>
        <externalDeveloperName>c_prep_by</externalDeveloperName>
        <label>c_prep_by</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <description>contact</description>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_rating_date__c</fullName>
        <description>d_rating_date</description>
        <externalDeveloperName>d_rating_date</externalDeveloperName>
        <label>d_rating_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>d_trans_date__c</fullName>
        <description>d_trans_date</description>
        <externalDeveloperName>d_trans_date</externalDeveloperName>
        <label>d_trans_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>f_coin_in__c</fullName>
        <description>f_coin_in</description>
        <externalDeveloperName>f_coin_in</externalDeveloperName>
        <label>f_coin_in</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_coin_out__c</fullName>
        <description>f_coin_out</description>
        <externalDeveloperName>f_coin_out</externalDeveloperName>
        <label>f_coin_out</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_denom__c</fullName>
        <description>f_denom</description>
        <externalDeveloperName>f_denom</externalDeveloperName>
        <label>f_denom</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_jackpot_amt__c</fullName>
        <description>f_jackpot_amt</description>
        <externalDeveloperName>f_jackpot_amt</externalDeveloperName>
        <label>f_jackpot_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_play_time__c</fullName>
        <description>f_play_time</description>
        <externalDeveloperName>f_play_time</externalDeveloperName>
        <label>f_play_time</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_win__c</fullName>
        <description>f_theo_win</description>
        <externalDeveloperName>f_theo_win</externalDeveloperName>
        <label>f_theo_win</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_winloss__c</fullName>
        <description>f_winloss</description>
        <externalDeveloperName>f_winloss</externalDeveloperName>
        <label>f_winloss</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cms_dmid__c</fullName>
        <description>i_cms_dmid</description>
        <externalDeveloperName>i_cms_dmid</externalDeveloperName>
        <label>i_cms_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_handle_pulls__c</fullName>
        <description>i_handle_pulls</description>
        <externalDeveloperName>i_handle_pulls</externalDeveloperName>
        <label>i_handle_pulls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_mach_num__c</fullName>
        <description>i_mach_num</description>
        <externalDeveloperName>i_mach_num</externalDeveloperName>
        <label>i_mach_num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rs_seq_num__c</fullName>
        <description>i_rs_seq_num</description>
        <externalDeveloperName>i_rs_seq_num</externalDeveloperName>
        <label>i_rs_seq_num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$gst_slot_rating_dtl_temp</label>
    <pluralLabel>caesars$gst_slot_rating_dtl_temp</pluralLabel>
</CustomObject>